--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="info">
                 <div class="blue-square"></div>
-                <h1>Joe Santos Garcia</h1>
-                <p>Web Developer</p>
+                <h1>Jitender mandal</h1>
+                <p>Front end Web Dev</p>
                 <a href="#">Latest works</a>
             </div>
             <div class="img">
@@ -408,8 +408,8 @@
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
-        <h5>Joe Santos Garcia</h5>
-        <h6>Web Developer</h6>
+        <h5>Jitender Mandal</h5>
+        <h6>Front end web dev</h6>
     </footer>
 
 
